- Move animation to global scope due to bug with visibility 2 and second animation (report it)

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -131,66 +131,3 @@ section#gpt-section {
   }
 }
 
-/* Animations */
-@keyframes spin {
-  to {
-    transform: rotate(1turn)
-  }
-}
-
-@keyframes morph {
-  0% {
-    border-radius: 40% 60% 60% 40%/70% 30%
-  }
-
-  to {
-    border-radius: 40% 60%
-  }
-}
-
-
-$outline-color: rgba(0, 204, 255, 0.3);
-
-@keyframes extension {
-
-  0% {
-    outline: 0 solid $outline-color;
-  }
-  10% {
-    outline: 0.025rem solid $outline-color;
-  }
-  20% {
-    outline: 0.05rem solid $outline-color;
-  }
-  30% {
-    outline: 0.075rem solid $outline-color;
-  }
-  40% {
-    outline: 0.1rem solid $outline-color;
-  }
-  50% {
-    outline: 0.125rem solid $outline-color;
-  }
-  60% {
-    outline: 0.15rem solid $outline-color;
-  }
-  70% {
-    outline: 0.175rem solid $outline-color;
-  }
-  80% {
-    outline: 0.2rem solid $outline-color;
-  }
-  90% {
-    outline: 0.225rem solid $outline-color;
-  }
-}
-
-@keyframes square-rotation {
-  0% {
-    transform: rotate(0deg);
-  }
-
-  100% {
-    transform: rotate(360deg);
-  }
-}
