--- a/src/app/components/skills/skills.component.scss
+++ b/src/app/components/skills/skills.component.scss
@@ -8,6 +8,7 @@ ul {
   justify-content: center;
   gap: 2rem;
   list-style: none;
+  padding: 0;
 
   & li {
     max-width: 12rem;
